--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "happy-dom": "10.11.0",
     "nano-staged": "0.8.0",
     "playwright": "1.37.1",
+    "sass": "^1.66.1",
     "simple-git-hooks": "2.9.0",
     "typescript": "5.2.2",
     "unplugin-auto-expose": "0.0.5",
@@ -51,6 +52,9 @@
     "vue-tsc": "1.8.8"
   },
   "dependencies": {
-    "electron-updater": "6.1.1"
+    "@vueuse/core": "^10.3.0",
+    "async-mutex": "^0.4.0",
+    "electron-updater": "6.1.1",
+    "platform-folders": "^0.6.0"
   }
 }
