--- a/packages/renderer/tsconfig.json
+++ b/packages/renderer/tsconfig.json
@@ -14,7 +14,8 @@
       "#preload": ["../preload/src/index"],
       "/@/*": ["./src/*"]
     },
-    "lib": ["ESNext", "dom", "dom.iterable"]
+    "lib": ["ESNext", "dom", "dom.iterable"],
+    "allowSyntheticDefaultImports": true
   },
   "include": [
     "src/**/*.vue",
